REST API with paging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,6 @@ install(TARGETS PyLDServer COMPONENT api EXPORT PyLDServer-config
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
+install(TARGETS PyLDServer DESTINATION ${PROJECT_SOURCE_DIR}/REST)
+
 add_subdirectory(test)
