expose and test subsetting samples

--- a/ld/tests/CMakeLists.txt
+++ b/ld/tests/CMakeLists.txt
@@ -10,6 +10,8 @@ target_link_libraries(testAll LDServer ${GTEST_LIB} ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS testAll COMPONENT cli RUNTIME DESTINATION test OPTIONAL)
 install(FILES
+        ../../data/EUR.samples.txt
+        ../../data/AFR.samples.txt
         ../../data/chr21.test.vcf.gz
         ../../data/chr21.test.vcf.gz.tbi
         ../../data/chr21.test.bcf
@@ -25,6 +27,7 @@ install(FILES
         ../../data/chrX.test.sav
         ../../data/chrX.test.sav.s1r
         ../../data/region_ld_22_51241101_51241385.hap.ld
+        ../../data/region_ld_22_51241101_51241385.AFR.hap.ld
         ../../data/variant_ld_22_51241101_vs_51241101_51241385.hap.ld
         ../../data/region_ld_X_60100_60150.hap.ld
         DESTINATION test)
