--- a/ld/requirements.txt
+++ b/ld/requirements.txt
@@ -1,3 +1,4 @@
 statgen/savvy@develop
 boost,http://downloads.sourceforge.net/project/boost/boost/1.67.0/boost_1_67_0.tar.bz2 --cmake boost -DBOOST_WITH_PYTHON=1
 gtest,https://github.com/google/googletest/archive/release-1.8.0.tar.gz
+redis,http://download.redis.io/releases/redis-5.0-rc4.tar.gz --cmake redis.cmake
