test redis and hiredis

--- a/ld/src/CMakeLists.txt
+++ b/ld/src/CMakeLists.txt
@@ -4,6 +4,7 @@ find_library(Z_LIB NAMES libz.a z HINT ${CGET_PREFIX}/lib)
 find_library(ZSTD_LIB zstd HINT ${CGET_PREFIX}/lib)
 find_library(BOOST_PYTHON_LIB boost_python27 HINT ${CGET_PREFIX}/lib)
 find_library(PYTHON_LIB python2.7 HINT ${CGET_PREFIX}/lib)
+find_library(HIREDIS_LIB hiredis HINT ${CGET_PREFIX}/lib)
 find_library(ARMADILLO_LIB armadillo)
 find_package(PythonLibs REQUIRED)
 
@@ -13,12 +14,12 @@ endif()
 
 set(SOURCE_FILES LDServer.cpp LDServer.h Raw.h Raw.cpp Segment.cpp Segment.h Cell.cpp Cell.h Types.h Morton.cpp Morton.h)
 add_library(LDServer ${SOURCE_FILES})
-target_link_libraries(LDServer ${SAVVY_LIB} ${HTS_LIB} ${Z_LIB} ${ZSTD_LIB} ${ARMADILLO_LIB})
+target_link_libraries(LDServer ${SAVVY_LIB} ${HTS_LIB} ${HIREDIS_LIB} ${Z_LIB} ${ZSTD_LIB} ${ARMADILLO_LIB})
 
 add_library(pywrapper SHARED pywrapper.cpp LDServer.cpp Raw.cpp Segment.cpp Segment.h Cell.cpp Cell.h Types.h Morton.cpp Morton.h)
 set_target_properties(pywrapper PROPERTIES SUFFIX ".so")
 set_target_properties(pywrapper PROPERTIES PREFIX "")
 target_include_directories(pywrapper PUBLIC ${PYTHON_INCLUDE_DIRS})
-target_link_libraries(pywrapper ${SAVVY_LIB} ${HTS_LIB} ${Z_LIB} ${ZSTD_LIB} ${ARMADILLO_LIB} ${BOOST_PYTHON_LIB} ${PYTHON_LIB})
+target_link_libraries(pywrapper ${SAVVY_LIB} ${HTS_LIB} ${HIREDIS_LIB} ${Z_LIB} ${ZSTD_LIB} ${ARMADILLO_LIB} ${BOOST_PYTHON_LIB} ${PYTHON_LIB})
 
 install(TARGETS pywrapper DESTINATION ${PROJECT_SOURCE_DIR}/../REST/ld)
