Added cereal serialization headers. Segment setialization code and tests.

--- a/ld/requirements.txt
+++ b/ld/requirements.txt
@@ -3,3 +3,4 @@ boost,http://downloads.sourceforge.net/project/boost/boost/1.67.0/boost_1_67_0.t
 gtest,https://github.com/google/googletest/archive/release-1.8.0.tar.gz
 redis,http://download.redis.io/releases/redis-5.0-rc4.tar.gz --cmake redis.cmake
 hiredis,https://github.com/redis/hiredis/archive/v0.13.3.tar.gz --cmake hiredis.cmake
+cereal,https://github.com/USCiLab/cereal/archive/v1.2.2.tar.gz --cmake header
