- solved problems with compiling and linking on linux

--- a/ld/src/CMakeLists.txt
+++ b/ld/src/CMakeLists.txt
@@ -5,7 +5,7 @@ find_library(ZSTD_LIB zstd HINT ${CGET_PREFIX}/lib)
 find_library(BOOST_PYTHON_LIB boost_python27 HINT ${CGET_PREFIX}/lib)
 find_library(PYTHON_LIB python2.7 HINT ${CGET_PREFIX}/lib)
 find_library(HIREDIS_LIB hiredis HINT ${CGET_PREFIX}/lib)
-find_library(ARMADILLO_LIB armadillo)
+find_library(ARMADILLO_LIB armadillo HINT ${CGET_PREFIX}/lib)
 find_package(PythonLibs REQUIRED)
 
 if(CGET_PREFIX)
@@ -22,4 +22,4 @@ set_target_properties(pywrapper PROPERTIES PREFIX "")
 target_include_directories(pywrapper PUBLIC ${PYTHON_INCLUDE_DIRS})
 target_link_libraries(pywrapper ${SAVVY_LIB} ${HTS_LIB} ${HIREDIS_LIB} ${Z_LIB} ${ZSTD_LIB} ${ARMADILLO_LIB} ${BOOST_PYTHON_LIB} ${PYTHON_LIB})
 
-install(TARGETS pywrapper DESTINATION ${PROJECT_SOURCE_DIR}/../REST/ld)
+install(TARGETS pywrapper DESTINATION ${PROJECT_SOURCE_DIR}/../rest/ld)
