Support for masks in C++

--- a/ld/requirements.txt
+++ b/ld/requirements.txt
@@ -5,3 +5,4 @@ gtest,https://github.com/google/googletest/archive/release-1.8.0.tar.gz
 redis,http://download.redis.io/releases/redis-5.0-rc4.tar.gz --cmake redis.cmake
 hiredis,https://github.com/redis/hiredis/archive/v0.13.3.tar.gz --cmake hiredis.cmake
 cereal,https://github.com/USCiLab/cereal/archive/v1.2.2.tar.gz --cmake header
+ekg/tabixpp@6bbe6907d0d --cmake tabixpp.cmake
