--- a/ld/requirements.txt
+++ b/ld/requirements.txt
@@ -1,4 +1,4 @@
-statgen/savvy@develop -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
+statgen/savvy@5cf11170e5d -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
 armadillo,http://sourceforge.net/projects/arma/files/armadillo-9.100.5.tar.xz
 boost,http://downloads.sourceforge.net/project/boost/boost/1.67.0/boost_1_67_0.tar.bz2 --cmake boost -DBOOST_WITH_PYTHON=1 -DBOOST_WITH_SYSTEM=1 -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
 gtest,https://github.com/google/googletest/archive/release-1.8.0.tar.gz
