--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: linux
 before_install:
  - sudo apt update
  - sudo apt install cmake
- - sudo apt install python2.7 python-pip virtualenv
+ - sudo apt install python2.7 python-pip python-virtualenv
  - sudo apt install libopenblas-base libopenblas-dev liblapack-dev libarpack2 libarpack2-dev
 script: virtualenv -p python2 venv && source venv/bin/activate && pip install backports.lzma cget && cget install ld
 
