--- a/rest/requirements.txt
+++ b/rest/requirements.txt
@@ -1,17 +1,39 @@
-Flask
-flask-cors
-flask-compress
-marshmallow>=3.0.0b19
-webargs>=4.1.1
-gevent
-gunicorn
-pytest
-click
-requests
-argparse
-flask_sqlalchemy
-pysam
-raven==6.9.0
+atomicwrites==1.3.0
+attrs==19.1.0
 blinker==1.4
-tabulate==0.8.3
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+contextlib2==0.5.5
+filelock==3.0.10
+Flask==1.0.2
+Flask-Compress==1.4.0
+Flask-Cors==3.0.7
+Flask-SQLAlchemy==2.3.2
+funcsigs==1.0.2
+gevent==1.3.7
+greenlet==0.4.15
+gunicorn==19.9.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+marshmallow==3.0.0rc1
+more-itertools==5.0.0
+pathlib2==2.3.3
+pluggy==0.9.0
+py==1.8.0
+pytest==4.0.2
 PyYAML==3.13
+raven==6.9.0
+requests==2.21.0
+scandir==1.10.0
+six==1.12.0
+SQLAlchemy==1.2.15
+tabulate==0.8.3
+toml==0.10.0
+tox==3.7.0
+urllib3==1.24.1
+virtualenv==16.4.3
+webargs==4.1.3
+Werkzeug==0.14.1
