--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27
+envlist = py27, cpp
 skipsdist = true
 
 [testenv:py27]
@@ -8,3 +8,8 @@ deps =
   -r{toxinidir}/rest/requirements.txt
 commands = 
   python -m pytest
+
+[testenv:cpp]
+changedir = cget/test
+commands =
+  ./testAll 127.0.0.1 8888
