--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   ldserver:
-    image: "ldserver:latest"
+    image: "statgen/ldserver:latest"
     environment:
       - FLASK_APP=rest/ldserver
       - LDSERVER_CONFIG_SCRIPT
@@ -15,7 +15,7 @@ services:
     command: /bin/bash -c "source $$LDSERVER_CONFIG_SCRIPT && gunicorn -b 0.0.0.0:5001 -w $$LDSERVER_WORKERS -k gevent --pythonpath rest 'ldserver:create_app()'"
 
   raremetal:
-    image: "ldserver:latest"
+    image: "statgen/ldserver:latest"
     environment:
       - FLASK_APP=rest/raremetal
       - RAREMETAL_CONFIG_DATA
