--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -6,3 +6,4 @@ redis,http://download.redis.io/releases/redis-5.0-rc4.tar.gz --cmake redis.cmake
 hiredis,https://github.com/redis/hiredis/archive/v0.13.3.tar.gz --cmake hiredis.cmake
 cereal,https://github.com/USCiLab/cereal/archive/v1.2.2.tar.gz --cmake header
 ekg/tabixpp@6bbe6907d0d --cmake tabixpp.cmake
+atks/Rmath@1a438f2f363e1f8fcf6b2804bd2cd0136d300230 --cmake rmath.cmake
