Compile with boost iostreams

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_library(GTEST_LIB gmock HINT ${CGET_PREFIX}/lib)
 find_library(BOOST_SYSTEM_LIB boost_system HINT ${CGET_PREFIX}/lib)
+find_library(BOOST_IOSTREAMS_LIB boost_iostreams HINT ${CGET_PREFIX}/lib)
 find_library(MKL_RT_LIB mkl_rt)
 find_package(Threads REQUIRED)
 
@@ -13,7 +14,7 @@ endif()
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 add_executable(testAll LDServerTest.cpp Main_TestAll.cpp RareMetal.cpp)
-target_link_libraries(testAll LDServer ${BOOST_SYSTEM_LIB} ${GTEST_LIB} ${MKL_RT_LIB} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(testAll LDServer ${BOOST_SYSTEM_LIB} ${BOOST_IOSTREAMS_LIB} ${GTEST_LIB} ${MKL_RT_LIB} ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS testAll COMPONENT cli RUNTIME DESTINATION test OPTIONAL)
 install(FILES
