Finish rvtest test case

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ if(NOT MKL_RT_LIB)
 endif()
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-add_executable(testAll LDServerTest.cpp Main_TestAll.cpp RareMetal.cpp)
+add_executable(testAll LDServerTest.cpp Main_TestAll.cpp RareMetal.cpp RvTest.cpp)
 target_link_libraries(testAll LDServer ${BOOST_SYSTEM_LIB} ${BOOST_IOSTREAMS_LIB} ${GTEST_LIB} ${MKL_RT_LIB} ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS testAll COMPONENT cli RUNTIME DESTINATION test OPTIONAL)
