--- a/rest/requirements.txt
+++ b/rest/requirements.txt
@@ -1,39 +1,50 @@
-atomicwrites==1.3.0
-attrs==19.1.0
+appdirs==1.4.4
+atomicwrites==1.4.0
+attrs==20.2.0
 blinker==1.4
-certifi==2018.11.29
+Brotli==1.0.9
+certifi==2020.6.20
 chardet==3.0.4
-Click==7.0
-contextlib2==0.5.5
-filelock==3.0.10
-Flask==1.0.2
-Flask-Compress==1.4.0
-Flask-Cors==3.0.7
-Flask-SQLAlchemy==2.3.2
+click==7.1.2
+contextlib2==0.6.0.post1
+distlib==0.3.1
+filelock==3.0.12
+Flask==1.1.2
+Flask-Compress==1.7.0
+Flask-Cors==3.0.9
+Flask-SQLAlchemy==2.4.4
 funcsigs==1.0.2
-gevent==1.3.7
-greenlet==0.4.15
-gunicorn==19.9.0
-idna==2.8
+gevent==20.9.0
+greenlet==0.4.17
+gunicorn==20.0.4
+idna==2.10
+importlib-metadata==2.0.0
+importlib-resources==3.3.0
+iniconfig==1.1.1
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-marshmallow==3.0.0rc1
-more-itertools==5.0.0
-pathlib2==2.3.3
-pluggy==0.9.0
-py==1.8.0
-pytest==4.0.2
-PyYAML==3.13
-raven==6.9.0
-requests==2.21.0
+marshmallow==3.8.0
+more-itertools==8.5.0
+packaging==20.4
+pathlib2==2.3.5
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.1.2
+PyYAML==5.3.1
+raven==6.10.0
+requests==2.24.0
 scandir==1.10.0
-six==1.12.0
-SQLAlchemy==1.2.15
-tabulate==0.8.3
-toml==0.10.0
-tox==3.7.0
-urllib3==1.24.1
-virtualenv==16.4.3
-webargs==4.1.3
-Werkzeug==0.14.1
+six==1.15.0
+SQLAlchemy==1.3.20
+tabulate==0.8.7
+toml==0.10.1
+tox==3.20.1
+urllib3==1.25.11
+virtualenv==20.1.0
+webargs==6.1.1
+Werkzeug==1.0.1
+zipp==3.4.0
+zope.event==4.5.0
+zope.interface==5.1.2
