Support headerless rvtest/raremetal score files

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -85,6 +85,10 @@ install(FILES
         ../../data/test.smallchunk.MetaScore.assoc.gz
         ../../data/test.smallchunk.MetaCov.assoc.gz.tbi
         ../../data/test.smallchunk.MetaCov.assoc.gz
+        ../../data/test.smallchunk.noheader.MetaScore.assoc.gz.tbi
+        ../../data/test.smallchunk.noheader.MetaScore.assoc.gz
+        ../../data/test.smallchunk.noheader.MetaCov.assoc.gz.tbi
+        ../../data/test.smallchunk.noheader.MetaCov.assoc.gz
         ../../data/test.twochroms.chr1.MetaCov.assoc.gz
         ../../data/test.twochroms.chr1.MetaCov.assoc.gz.tbi
         ../../data/test.twochroms.chr1.MetaScore.assoc.gz
