--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project(LDServer VERSION 0.0.1)
 include(GNUInstallDirs)
-add_compile_options(-Wall -Wpedantic)
+add_compile_options(-Wall -Wpedantic -march=native)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_STANDARD 14)
