Do not link libpython as static lib on MacOS
Otherwise pywrapper.so will throw `Fatal Python error: PyThreadState_Get: no current thread` on import

--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -8,6 +8,11 @@ find_library(ARMADILLO_LIB armadillo HINT ${CGET_PREFIX}/lib)
 find_library(MKL_RT_LIB mkl_rt)
 find_library(ARROW_LIB arrow HINT ${CGET_PREFIX/lib})
 find_library(PARQUET_LIB parquet HINT ${CGET_PREFIX/lib})
+
+if(APPLE)
+    set(Python3_USE_STATIC_LIBS FALSE)
+endif()
+
 find_package(Python3 3.8 COMPONENTS Development REQUIRED)
 
 set(BOOST_ROOT "" CACHE PATH ${CGET_PREFIX})
