--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,13 @@
 envlist = py38, cpp
 skipsdist = true
 
-[testenv:py36]
+[testenv:py38]
 changedir = rest
 deps = 
+  -r{toxinidir}/rest/build.txt
   -r{toxinidir}/rest/requirements.txt
 commands = 
-  python -m pytest
+  python3 -m pytest
 
 [testenv:cpp]
 changedir = cget/test
