--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -8,5 +8,5 @@ hiredis,https://github.com/redis/hiredis/archive/v0.13.3.tar.gz --cmake hiredis.
 cereal,https://github.com/USCiLab/cereal/archive/v1.2.2.tar.gz --cmake header
 ekg/intervaltree@v0.1 --cmake header
 welchr/tabixpp@36a15c88922ddab4ae12a3555181c1b1cd56a8ed --cmake tabixpp.cmake
-msgpack/msgpack-c@cpp_master
+msgpack/msgpack-c@be4d971c62798eb59f8455dc77a4529748bcd08f
 apache/arrow@apache-arrow-4.0.1 --cmake arrow.cmake
