--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,5 +1,5 @@
 statgen/savvy@5cf11170e5d -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
-openblas,https://github.com/xianyi/OpenBLAS/archive/v0.3.15.tar.gz -DUSE_OPENMP=1
+openblas,https://github.com/xianyi/OpenBLAS/archive/v0.3.17.tar.gz -DUSE_OPENMP=1 --cmake openblas.cmake
 armadillo,http://sourceforge.net/projects/arma/files/armadillo-10.4.1.tar.xz
 boost,http://downloads.sourceforge.net/project/boost/boost/1.67.0/boost_1_67_0.tar.bz2 --cmake boost.cmake -DBOOST_WITH_CHRONO=1 -DBOOST_WITH_IOSTREAMS=1 -DBOOST_WITH_PYTHON=1 -DBOOST_WITH_SYSTEM=1 -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
 gtest,https://github.com/google/googletest/archive/release-1.8.0.tar.gz
