--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - redis
     working_dir: /home/ldserver
-    command: /bin/bash -c "source $$LDSERVER_CONFIG_SCRIPT && gunicorn -b 0.0.0.0:$$LDSERVER_PORT -w $$LDSERVER_WORKERS -k gevent --pythonpath rest 'ldserver:create_app()'"
+    command: /bin/bash -c "source $$LDSERVER_CONFIG_SCRIPT && gunicorn -b 0.0.0.0:$$LDSERVER_PORT -w $$LDSERVER_WORKERS -k gthread --pythonpath rest 'ldserver:create_app()'"
 
   raremetal:
     build: .
@@ -22,7 +22,7 @@ services:
     depends_on:
       - redis
     working_dir: /home/ldserver
-    command: /bin/bash -c "flask add-yaml $$RAREMETAL_CONFIG_DATA && gunicorn -b 0.0.0.0:$$RAREMETAL_PORT -w $$RAREMETAL_WORKERS -k gevent --pythonpath rest 'raremetal:create_app()'"
+    command: /bin/bash -c "flask add-yaml $$RAREMETAL_CONFIG_DATA && gunicorn -b 0.0.0.0:$$RAREMETAL_PORT -w $$RAREMETAL_WORKERS -k gthread --pythonpath rest 'raremetal:create_app()'"
 
   redis:
     image: "redis:5.0-alpine"
