--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -3,6 +3,7 @@ openblas,https://github.com/xianyi/OpenBLAS/archive/v0.3.17.tar.gz -DUSE_OPENMP=
 armadillo,http://sourceforge.net/projects/arma/files/armadillo-10.4.1.tar.xz
 boost,http://downloads.sourceforge.net/project/boost/boost/1.67.0/boost_1_67_0.tar.bz2 --cmake boost.cmake -DBOOST_WITH_CHRONO=1 -DBOOST_WITH_IOSTREAMS=1 -DBOOST_WITH_PYTHON=1 -DBOOST_WITH_SYSTEM=1 -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
 gtest,https://github.com/google/googletest/archive/release-1.8.0.tar.gz
+benchmark,https://github.com/google/benchmark/archive/refs/tags/v1.5.6.tar.gz --ignore-requirements -DBENCHMARK_ENABLE_GTEST_TESTS=OFF -DCMAKE_BUILD_TYPE=Release
 redis,http://download.redis.io/releases/redis-5.0.12.tar.gz --cmake redis.cmake
 hiredis,https://github.com/redis/hiredis/archive/v0.13.3.tar.gz --cmake hiredis.cmake
 cereal,https://github.com/USCiLab/cereal/archive/v1.2.2.tar.gz --cmake header
