--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,3 +1,4 @@
+jonathonl/shrinkwrap@395361020c8 -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
 statgen/savvy@5cf11170e5d -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC
 openblas,https://github.com/xianyi/OpenBLAS/archive/v0.3.17.tar.gz -DUSE_OPENMP=1 --cmake openblas.cmake
 armadillo,http://sourceforge.net/projects/arma/files/armadillo-10.4.1.tar.xz
