--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ current_version = 0.7.0
 commit = True
 message = Version {new_version}
 tag = True
+sign_tags = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)b?(?P<beta>\d*)\.?(dev)?(?P<dev>\d*)
 serialize = 
 	{major}.{minor}.{patch}b{beta}.dev{dev}
